sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: type mismatch;
 found   : Unit
 required: Int
    position = gnomeLook(position)
                        ^AlgGnomeSort:14: warning: enclosing method gnomeLook has result type Unit: return value discarded
    return pos+1;
    ^AlgGnomeSort:18: warning: enclosing method gnomeLook has result type Unit: return value discarded
      return pos+1;
      ^AlgGnomeSort:20: warning: enclosing method gnomeLook has result type Unit: return value discarded
      return pos-1;
      ^